tests/fixtures/valid/crazy/builtins/reversed.py
# Valid reversed() calls
# Auto-generated by scripts/generate_tests.py

b0_reversed_str = reversed("hello")
b1_reversed_bytes = reversed(b"hello")
b2_reversed_list = reversed([1, 2, 3])
b3_reversed_dict = reversed({"a": 1})

print("reversed() tests passed!")
