tests/fixtures/invalid/pow_str_set_dict.py
# Cannot call pow() with Str, Set[int], Dict[str, int]
x = pow("hello", {1, 2, 3}, {"a": 1})
